--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -11,6 +11,7 @@ encoding//torgo/__init__.py=utf-8
 encoding//torgo/cache/codis.py=utf-8
 encoding//torgo/cache/db_cache.py=utf-8
 encoding//torgo/cache/local_cache.py=utf-8
+encoding//torgo/connection.py=utf-8
 encoding//torgo/dbs/alchemy.py=utf-8
 encoding//torgo/dbs/es_ref.py=utf-8
 encoding//torgo/dbs/hbase.py=utf-8
@@ -26,3 +27,5 @@ encoding//torgo/utils/decos.py=utf-8
 encoding//torgo/utils/extend.py=utf-8
 encoding//torgo/utils/http_util.py=utf-8
 encoding//torgo/utils/tpool.py=utf-8
+encoding/<project>=UTF8
+encoding/setup.py=utf-8
